--- a/src/main/resources/layouts/DeckManagementGui.fxml
+++ b/src/main/resources/layouts/DeckManagementGui.fxml
@@ -3,22 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="panel" prefHeight="720.0" prefWidth="1280.0" fx:controller="controller.fxml.DeckManagement" stylesheets="@../css/DeckManagementGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane id="panel" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/DeckManagementGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
    <children>
-      <ListView fx:id="leftList" layoutX="-2.0" layoutY="-5.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1111.0" AnchorPane.topAnchor="0.0" />
-      <ListView fx:id="rightList" layoutX="1111.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <VBox layoutX="556.0" prefHeight="686.0" prefWidth="169.0">
+      <ListView fx:id="leftList" layoutX="-2.0" layoutY="-5.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ListView fx:id="rightList" layoutX="1111.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ListView fx:id="centerList" prefHeight="592.0" prefWidth="169.0" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="555.0" AnchorPane.rightAnchor="555.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane layoutX="556.0" layoutY="592.0" prefHeight="94.0" prefWidth="169.0" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="555.0" AnchorPane.rightAnchor="555.0">
          <children>
-            <ListView fx:id="centerList" prefHeight="592.0" prefWidth="169.0" />
-            <AnchorPane prefHeight="94.0" prefWidth="169.0">
-               <children>
-                  <Button fx:id="saveButton" onAction="#saveDeck" text="Save" layoutX="64.0" layoutY="14.0" mnemonicParsing="false"  />
-                  <Button fx:id="backButton" onAction="#backToMainMenu" text="Back" layoutX="64.0" layoutY="55.0" mnemonicParsing="false"  />
-               </children>
-            </AnchorPane>
+            <Button fx:id="saveButton" alignment="CENTER" layoutX="64.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveDeck" text="Save" />
+            <Button fx:id="backButton" alignment="CENTER" layoutX="64.0" layoutY="55.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" />
          </children>
-      </VBox>
+      </AnchorPane>
    </children>
 </AnchorPane>
