--- a/src/main/resources/layouts/MainMenuGui.fxml
+++ b/src/main/resources/layouts/MainMenuGui.fxml
@@ -2,15 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import controller.sound.SoundButton?>
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/MainMenuGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.MainMenu">
    <children>
-      <SoundButton id="decksButton" fx:factory="create" fx:id="decksButton" onAction="#openDeckManagement" layoutX="40.0" layoutY="240.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Decks" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="240.0" />
+      <Button id="decksButton"  fx:id="decksButton"  layoutX="40.0" layoutY="240.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Decks" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="240.0" />
       <Button id="cardsButton" fx:id="cardsButton" layoutX="40.0" layoutY="340.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Cards" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="340.0" />
-      <SoundButton id="rulesButton" fx:factory="create" fx:id="rulesButton" onAction="#openRules" layoutX="40.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="440.0" />
-      <SoundButton id="matchButton" fx:factory="create" fx:id="matchButton" onAction="#openMatch" layoutX="540.0" layoutY="280.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="160.0" prefWidth="200.0" text="Play" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="545.0" AnchorPane.topAnchor="310.0" />
-      <SoundButton id="settingsButton" fx:factory="create" fx:id="settingsButton" onAction="#openSettings" layoutX="200.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.91" prefHeight="80.0" prefWidth="230.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="530.0" AnchorPane.topAnchor="482.0" />
+      <Button id="rulesButton"  fx:id="rulesButton"  layoutX="40.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="440.0" />
+      <Button id="matchButton"  fx:id="matchButton"  layoutX="540.0" layoutY="280.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="160.0" prefWidth="200.0" text="Play" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="545.0" AnchorPane.topAnchor="310.0" />
+      <Button id="settingsButton"  fx:id="settingsButton"  layoutX="200.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.91" prefHeight="80.0" prefWidth="230.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="530.0" AnchorPane.topAnchor="482.0" />
    </children>
 </AnchorPane>
 
