--- a/src/main/resources/layouts/RulesGui.fxml
+++ b/src/main/resources/layouts/RulesGui.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import controller.sound.SoundButton?>
+<?import javafx.scene.control.Button?>
 
 <VBox  id="panel" xmlns="http://javafx.com/javafx/8" stylesheets="@../css/RulesGui.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Rules">
   <children>
-    <SoundButton fx:id="backButton" fx:factory="create" mnemonicParsing="false" onAction="#backToMainMenu" text="Indietro" />
+    <Button fx:id="backButton" mnemonicParsing="false" text="Back" />
     <TabPane fx:id="tabPane" prefHeight="720.0" prefWidth="1280.0">
       <tabs>
-        <Tab text="Fase 1">
+        <Tab text="Card Creation Phase">
           <content>
             <SplitPane dividerPositions="0.5">
               <items>
@@ -33,7 +32,7 @@
             </SplitPane>
           </content>
         </Tab>
-        <Tab text="Fase 2">
+        <Tab text="Deck Management Phase">
       <content>
         <SplitPane dividerPositions="0.5">
           <items>
