--- a/src/main/resources/layouts/DeckManagementGui.fxml
+++ b/src/main/resources/layouts/DeckManagementGui.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="panel" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/DeckManagementGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
@@ -11,8 +12,9 @@
       <ListView fx:id="centerList" prefHeight="592.0" prefWidth="169.0" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="555.0" AnchorPane.rightAnchor="555.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane layoutX="556.0" layoutY="592.0" prefHeight="94.0" prefWidth="169.0" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="555.0" AnchorPane.rightAnchor="555.0">
          <children>
-            <Button fx:id="saveButton" alignment="CENTER" layoutX="64.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveDeck" text="Save" />
-            <Button fx:id="backButton" alignment="CENTER" layoutX="64.0" layoutY="55.0" mnemonicParsing="false"  text="Back" />
+            <Button fx:id="saveButton" alignment="CENTER" layoutX="65.0" layoutY="35.0" mnemonicParsing="false" onAction="#saveDeck" text="Save" />
+            <Button fx:id="backButton" alignment="CENTER" layoutX="64.0" layoutY="68.0" mnemonicParsing="false" text="Back" />
+            <TextField fx:id="deckNameTextField" alignment="CENTER" layoutX="10.0" layoutY="2.0" />
          </children>
       </AnchorPane>
    </children>
