--- a/src/main/resources/layouts/SettingsGui.fxml
+++ b/src/main/resources/layouts/SettingsGui.fxml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Settings">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="500.0" layoutX="229.0" layoutY="110.0" opacity="0.59" stroke="BLACK" strokeType="INSIDE" width="822.0" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="229.0" AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="110.0" />
-      <Label id="settingsLabel" layoutX="520.0" layoutY="140.0" text="Settings"/>
-      <Label layoutX="277.0" layoutY="200.0" text="Toggle Full Screen" />
-      <Button id="toggleFullScreenButton" fx:id="toggleFullScreenButton" layoutX="277.0" layoutY="250.0" mnemonicParsing="false"  prefHeight="32.0" prefWidth="150.0" text="Enable/Disable" AnchorPane.leftAnchor="277.0" AnchorPane.topAnchor="250.0"/>
-      <Label layoutX="277.0" layoutY="300.0" text="Music Audio Level" />
-      <Slider id="musicAudioLevelSlider" fx:id="musicAudioLevelSlider" layoutX="277.0" layoutY="340.0" prefHeight="32.0" prefWidth="360.0" showTickMarks="true" value="50.0" AnchorPane.leftAnchor="277.0" AnchorPane.topAnchor="340.0" />
-      <Button id="backButton" fx:id="backButton" layoutX="575.0" layoutY="470.0" mnemonicParsing="false"  text="Back" textAlignment="CENTER"/>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="586.0" layoutX="229.0" layoutY="22.0" opacity="0.92" stroke="BLACK" strokeType="INSIDE" width="822.0" AnchorPane.bottomAnchor="112.0" AnchorPane.leftAnchor="229.0" AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="22.0" />
+      <Label id="settingsLabel" layoutX="526.0" layoutY="22.0" text="Settings" />
+      <Label layoutX="271.0" layoutY="104.0" text="Toggle Full Screen" />
+      <Button id="toggleFullScreenButton" fx:id="toggleFullScreenButton" layoutX="275.0" layoutY="153.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="150.0" text="Enable/Disable" AnchorPane.leftAnchor="275.0" AnchorPane.topAnchor="153.0" />
+      <Label layoutX="274.0" layoutY="199.0" text="Music Audio Level" />
+      <Slider id="musicAudioLevelSlider" fx:id="musicAudioLevelSlider" layoutX="274.0" layoutY="255.0" prefHeight="32.0" prefWidth="360.0" showTickMarks="true" value="50.0" AnchorPane.leftAnchor="274.0" AnchorPane.topAnchor="255.0" />
+      <Button id="backButton" fx:id="backButton" layoutX="563.0" layoutY="511.0" mnemonicParsing="false" text="Back" textAlignment="CENTER" />
+      <Label layoutX="275.0" layoutY="287.0" text="Select Main Music" />
+      <Label layoutX="275.0" layoutY="389.0" text="Select Battle Music " />
+      <ChoiceBox fx:id="choiceMainTheme" layoutX="275.0" layoutY="331.0" prefHeight="1.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="choicheBattleTheme" layoutX="275.0" layoutY="427.0" prefHeight="1.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
